# exyleio-api

./: .dockerignore  .firebaserc  .gitignore  .prettierrc  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  Rocket.toml  bun.lockb  docker-compose.yml  firebase.json  nodemon.json  package.json  prod.Dockerfile  requirements.txt  run.sh  scripts.py  test.py  tsconfig.json
.github/workflows/: deploy.yml
app/: __init__.py  db.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: is_redis_online.py  players.py
app/core/: config.py  error.py
app/models/: __init__.py  game_mode.py  player.py  tag.py  tier.py
src/: db.rs  main.rs  resolvers.ts  server.ts  tests.rs  util.rs
src/json/: mod.rs
src/routes/: mod.rs  ping.rs
src/routes/players/: mod.rs  player.rs
src/tests/: ping.rs
tests/api/v1/endpoints/: test_is_redis_online.py
